# cron-run

./: Cargo.toml  install.sh
.github/workflows/: build.yaml
src/: main.rs  schedule.rs
