[package]
name = "cron-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
chrono-tz = "0.8.3"
clap = { version = "4.4.6", features = ["derive", "env"] }
cron-parser = "0.8.0"
dirs = "5.0.1"
